fix VE toolbar z-index

--- a/styles/mediawiki.scss
+++ b/styles/mediawiki.scss
@@ -1,3 +1,9 @@
+// Visual Editor -------------------------------------------------------------------------------------------------------
+// ensure, that navbar-menus are above ve
+div.ve-ui-toolbar > div.oo-ui-toolbar-bar {
+  z-index: 1;
+}
+
 // Body ----------------------------------------------------------------------------------------------------------------
 .mw-body {
   padding: 0;
